# csde

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/csde/: __init__.py  _base.py  api.py  model.py  model_poisson.py  optimization.py
tests/: test_csde.py
