[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csde"
version = "0.1.0"
description = "Corrected Spatial Differential Expression analysis package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Pierre Boyeau"},
]
dependencies = [
    "anndata>=0.8.0",
    "scanpy>=1.9.0",
    "jax>=0.4.0",
    "flax>=0.7.0",
    "optax>=0.1.0",
    "numpyro>=0.12.0",
    "statsmodels>=0.14.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
